\name{missMethylnews}
\title{missMethyl News}
\encoding{UTF-8}

\section{Version 0.99.6}{\itemize{

\item
Modified getLeveneResiduals 

}}

\section{Version 0.99.5}{\itemize{

\item
Modified the varFit function to accept DGEList objects for differential variability testing for RNA-Seq data.

}}

\section{Version 0.99.4}{\itemize{

\item
First version of package contains functions to perform SWAN normalisation and differential variability analysis for DNA methylation data from Illumina's Infinium HumanMethylation450 beadchip.

}}